--- a/index.html
+++ b/index.html
@@ -6,47 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ÍRIS</title>
 
-    <!-- ICONE NA GUIA DE ENDEREÇO -->
     <link rel="shortcut icon" href="img/Conteúdo.svg" type="image/x-icon">
-
-    <!-- VINCULA O CSS AO HTML -->
     <link rel="stylesheet" href="./style.css">
-
-    <!-- VINCULA O SCRIPT JAVAS AO HTML -->
     <script src="./script.js" defer></script>
-
-
 </head>
 
 <body>
 
+    <!-- HEADER -->
     <header>
-        <img id="logo" src="./img/image 1.svg" alt="logo da ÍRIS">
+        <img id="logo" src="./img/image 1.svg" alt="Logo da ÍRIS">
 
         <nav id="menu" class="links">
-
-            <a href="#inicio">Início</a>
-            <a href="#sobrenos">Sobre nós</a>
-            <a href="#contato">Contato</a>
-            <a href="#cadastrese">Cadastre-se</a>
-
+            <a href="#inicio">INÍCIO</a>
+            <a href="#sobrenos">SOBRE NÓS</a>
+            <a href="#contato">CONTATO</a>
+            <a href="#cadastrese">CADASTRE-SE</a>
         </nav>
 
         <button type="menu_botao">
             <svg id="icone-barras" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
-                <path
-                    d="M96 160C96 142.3 110.3 128 128 128L512 128C529.7 128 544 142.3 544 160C544 177.7 529.7 192 512 192L128 192C110.3 192 96 177.7 96 160zM96 320C96 302.3 110.3 288 128 288L512 288C529.7 288 544 302.3 544 320C544 337.7 529.7 352 512 352L128 352C110.3 352 96 337.7 96 320zM544 480C544 497.7 529.7 512 512 512L128 512C110.3 512 96 497.7 96 480C96 462.3 110.3 448 128 448L512 448C529.7 448 544 462.3 544 480z" />
+                <path d="M96 160C96 142.3 110.3 128 128 128L512 128C529.7 128 544 142.3 
+                544 160C544 177.7 529.7 192 512 192L128 192C110.3 192 96 177.7 96 160z
+                M96 320C96 302.3 110.3 288 128 288L512 288C529.7 288 544 302.3 
+                544 320C544 337.7 529.7 352 512 352L128 352C110.3 352 
+                96 337.7 96 320zM544 480C544 497.7 529.7 512 
+                512 512L128 512C110.3 512 96 497.7 96 480C96 462.3 
+                110.3 448 128 448L512 448C529.7 448 544 462.3 544 480z" />
             </svg>
 
             <svg id="icone-x" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
-                <path
-                    d="M504.6 148.5C515.9 134.9 514.1 114.7 500.5 103.4C486.9 92.1 466.7 93.9 455.4 107.5L320 270L184.6 107.5C173.3 93.9 153.1 92.1 139.5 103.4C125.9 114.7 124.1 134.9 135.4 148.5L278.3 320L135.4 491.5C124.1 505.1 125.9 525.3 139.5 536.6C153.1 547.9 173.3 546.1 184.6 532.5L320 370L455.4 532.5C466.7 546.1 486.9 547.9 500.5 536.6C514.1 525.3 515.9 505.1 504.6 491.5L361.7 320L504.6 148.5z" />
+                <path d="M504.6 148.5C515.9 134.9 514.1 114.7 500.5 103.4C486.9 92.1 
+                466.7 93.9 455.4 107.5L320 270L184.6 107.5C173.3 93.9 
+                153.1 92.1 139.5 103.4C125.9 114.7 124.1 134.9 135.4 
+                148.5L278.3 320L135.4 491.5C124.1 505.1 125.9 525.3 
+                139.5 536.6C153.1 547.9 173.3 546.1 184.6 532.5L320 
+                370L455.4 532.5C466.7 546.1 486.9 547.9 500.5 536.6C514.1 
+                525.3 515.9 505.1 504.6 491.5L361.7 320L504.6 148.5z" />
             </svg>
         </button>
-
     </header>
 
-
+    <!-- HERO (BANNER) -->
     <main>
         <section class="hero">
             <div class="hero-container">
@@ -54,12 +55,8 @@
             </div>
         </section>
 
-        <section class="EXPLORAR">
-
-            <!-- <section class="hero" → identifica o banner
-div class="hero-container" → facilita centralizar ou aplicar overlay depois
-img→  a imagem do perfume -->
-
+        <!-- EXPLORAR -->
+        <section class="explorar">
             <h2>EXPLORAR</h2>
             <p>
                 A Íris abre caminho para uma experiência sensorial única. Nossas criações unem elegância
@@ -70,112 +67,97 @@ img→  a imagem do perfume -->
             </p>
 
             <a href="#" class="btn-explorar">VER MAIS</a>
-
-
         </section>
 
-        <!-- A seção inteira
-– é a caixa maior que contém tudo
+        <!-- DESTAQUES -->
+        <section class="destaques">
+            <h2>DESTAQUES</h2>
 
-Um container
-– organiza os 4 grupos
-
-Cada item (grupo) tem:
-
-um círculo / imagem
-
-um texto
-(tudo dentro de uma div só) -->
-
-        <!-- <section class="destaques">
-            <H2>DESTAQUES</H2>
             <div class="faixa">
+
                 <div class="destaque-item">
                     <img src="./img/destaques01.jpg" alt="imagem-01">
                 </div>
-                <div class="destaque-item">
-                    <img src="/img/destaques02.jpg" alt="imagem-02">
-                </div>
-                <div class="destaque-item">
-                    <img src="/img/destaques03.jpg" alt="imagem-03">
-                </div>
-                <div class="destaque-item">
-                    <img src="/img/destaques04.jpg" alt="imagem-04">
-                </div>
-            </div>
-        </section> -->
 
+                <div class="destaque-item">
+                    <img src="./img/destaques02.jpg" alt="imagem-02">
+                </div>
+
+                <div class="destaque-item">
+                    <img src="./img/destaques03.jpg" alt="imagem-03">
+                </div>
+
+                <div class="destaque-item">
+                    <img src="./img/destaques04.jpg" alt="imagem-04">
+                </div>
+
+            </div>
+        </section>
+
+        <!-- CATEGORIAS -->
         <section class="categorias">
             <h2>CATEGORIAS</h2>
 
             <div class="categoria-item">
-                <div class="circulo">
-                    <img src="./img/floral.png" alt="">
-                </div>
+                <div class="circulo"><img src="./img/floral.png" alt="Floral"></div>
                 <p>FLORAIS</p>
             </div>
 
             <div class="categoria-item">
-                <div class="circulo">
-                    <img src="./img/amadeirado.png" alt="">
-                </div>
-                <P>AMADEIRADOS</P>
+                <div class="circulo"><img src="./img/amadeirado.png" alt="Amadeirado"></div>
+                <p>AMADEIRADOS</p>
             </div>
 
             <div class="categoria-item">
-                <div class="circulo">
-                    <img src="./img/citrico.png" alt="">
-                </div>
-                <P>CÍTRICOS</P>
+                <div class="circulo"><img src="./img/citrico.png" alt="Cítrico"></div>
+                <p>CÍTRICOS</p>
             </div>
 
             <div class="categoria-item">
                 <div class="circulo"></div>
-                <P>EXPLORAR MAIS</P>
+                <p>EXPLORAR MAIS</p>
             </div>
-
-
         </section>
 
-        <section class="INFORMADO">
+        <!-- INFORMADO -->
+        <section class="informado">
             <h2>MANTENHA-SE INFORMADO</h2>
-            <p>Mantenha-se sempre atualizada(o) com nossas novidades. Ao se cadastrar, você recebe promoções exclusivas,
-                convites para eventos, cupons especiais e conteúdos pensados para quem valoriza qualidade e
-                autenticidade.</p>
+            <p>
+                Mantenha-se sempre atualizada(o) com nossas novidades. Ao se cadastrar, você recebe promoções
+                exclusivas, convites para eventos, cupons especiais e conteúdos pensados para quem valoriza
+                qualidade e autenticidade.
+            </p>
 
-                 <a href="#" class="btn-explorar">CADASTRE-SE</a>
-
+            <a href="#" class="btn-explorar">CADASTRE-SE</a>
         </section>
 
-        <section class="COMPRAS">
+        <!-- COMPRAS -->
+        <section class="compras">
             <h2>SIMPLIFICAMOS SUAS COMPRAS</h2>
+
             <div class="quadrado">
-                <img src="./img/terra (2) 1.svg" alt="cadeado">
+                <img src="./img/terra (2) 1.svg" alt="Terra">
                 <p>IMPOSTOS E TAXAS</p>
             </div>
 
             <div class="quadrado">
-                <img src="./img/caminhao (1) 1.svg" alt="caminhao">
+                <img src="./img/caminhao (1) 1.svg" alt="Caminhão">
                 <p>OPÇÕES DE ENVIO</p>
             </div>
 
             <div class="quadrado">
-                <img src="./img/retorna 1.svg" alt="retorno">
+                <img src="./img/retorna 1.svg" alt="Retorno">
                 <p>INFORMAÇÕES E DEVOLUÇÕES</p>
             </div>
+
             <div class="quadrado">
-                <img src="./img/cadeado 1.svg" alt="cadeado">
-                <P>PAGAMENTO SEGURO</P>
+                <img src="./img/cadeado 1.svg" alt="Cadeado">
+                <p>PAGAMENTO SEGURO</p>
             </div>
 
         </section>
 
-
     </main>
-
-
-
-
 
 </body>
 
